# extRSort

./: .gitignore  Cargo.toml  README.md  a  bench.sh  create_data_file.py
src/: config.rs  lib.rs  main.rs  merge.rs  sort.rs  util.rs
src/chunk/: chunk.rs  iter.rs  mod.rs
src/heap/: mod.rs
src/line/: iter.rs  line.rs  mod.rs
src/tempfile/: mod.rs  tmp_dir.rs  tmp_file.rs
