[package]
name = "sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.2.0"
ctrlc = "3.4.0"
memchr = "2.5.0"
rayon = "1.7.0"
self_cell = "1.0.1"
structopt = "0.3.26"
tempfile = "3.7.1"
threadpool = "1.8.1"

[profile.release]
debug = true
